src/test/deca/syntax/valid/main_vide_2.deca
// Description:
//    main -> crochets avec un point-virgule
//
// Resultats:
//   ok


{ ;}
