src/test/deca/syntax/invalid/sans_point_virgule.deca
// Description:
//    manque un point virgule
//
// Resultats:
//    Erreur de syntaxe
//    ligne 8 : "mismatched input '}' expecting {',', ';'}

{ float x }
